[gd_scene load_steps=5 format=3 uid="uid://csr3fryjw3gex"]

[ext_resource type="Script" uid="uid://gw22clqygi4r" path="res://card.gd" id="1_7uoj0"]
[ext_resource type="Texture2D" uid="uid://1d5h6lfucqwx" path="res://icon.svg" id="1_js232"]
[ext_resource type="Texture2D" uid="uid://c85kam5a5jmf2" path="res://frame-card.png" id="3_qosr8"]
[ext_resource type="Texture2D" uid="uid://dm3ujg3a33lsm" path="res://artifacts/vampire_fang.png" id="4_3ujke"]

[node name="Card" type="Button"]
custom_minimum_size = Vector2(150, 200)
offset_left = 40.0
offset_right = 190.0
offset_bottom = 200.0
script = ExtResource("1_7uoj0")

[node name="ArtTexture" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 149.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_js232")
expand_mode = 4
stretch_mode = 5

[node name="FrameTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = -39.0
offset_right = 246.0
offset_bottom = 449.0
scale = Vector2(0.68, 0.68)
texture = ExtResource("3_qosr8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -12.0
offset_top = 143.0
offset_right = 160.0
offset_bottom = 276.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"GraphFrameTitleLabel"
text = "Name"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "10"
horizontal_alignment = 1
vertical_alignment = 2

[node name="AttackLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "15"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="AbilityButton1" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
stretch_mode = 0

[node name="AbilityButton2" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_3ujke")
stretch_mode = 0
